feat: cập nhật mã nguồn với cảnh báo của sonarque